# icu_ex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE.md  context7.json  generate_data.sh  mix.exs
data/: collation_diacritics_v1.rs.data  collation_metadata_v1.rs.data  collation_reordering_v1.rs.data  collation_tailoring_v1.rs.data  currency_essentials_v1.rs.data  currency_patterns_data_v1.rs.data  datetime_names_dayperiod_v1.rs.data  datetime_names_month_buddhist_v1.rs.data  datetime_names_month_chinese_v1.rs.data  datetime_names_month_coptic_v1.rs.data  datetime_names_month_dangi_v1.rs.data  datetime_names_month_ethiopian_v1.rs.data  datetime_names_month_gregorian_v1.rs.data  datetime_names_month_hebrew_v1.rs.data  datetime_names_month_hijri_v1.rs.data  datetime_names_month_indian_v1.rs.data  datetime_names_month_japanese_v1.rs.data  datetime_names_month_japanext_v1.rs.data  datetime_names_month_persian_v1.rs.data  datetime_names_month_roc_v1.rs.data  datetime_names_weekday_v1.rs.data  datetime_names_year_buddhist_v1.rs.data  datetime_names_year_chinese_v1.rs.data  datetime_names_year_coptic_v1.rs.data  datetime_names_year_dangi_v1.rs.data  datetime_names_year_ethiopian_v1.rs.data  datetime_names_year_gregorian_v1.rs.data  datetime_names_year_hebrew_v1.rs.data  datetime_names_year_hijri_v1.rs.data  datetime_names_year_indian_v1.rs.data  datetime_names_year_japanese_v1.rs.data  datetime_names_year_persian_v1.rs.data  datetime_names_year_roc_v1.rs.data  datetime_patterns_date_buddhist_v1.rs.data  datetime_patterns_date_chinese_v1.rs.data  datetime_patterns_date_coptic_v1.rs.data  datetime_patterns_date_dangi_v1.rs.data  datetime_patterns_date_ethiopian_v1.rs.data  datetime_patterns_date_gregorian_v1.rs.data  (+77 more)
native/icu_nif/: Cargo.toml  README.md
native/icu_nif/src/: currency.rs  datetime.rs  display_names.rs  lib.rs  list.rs  locale.rs  number.rs
(+37 files in other folders)
