[package]
name = "icu_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.37.0", features = ["big_integer"] }

icu = { git = "https://github.com/unicode-org/icu4x.git", rev = "b6791e78b1c2f69ffaeb5f60c53f6bceebf7e32a", features = ["sync", "experimental", "compiled_data"] }
icu_provider = { git = "https://github.com/unicode-org/icu4x.git", rev = "b6791e78b1c2f69ffaeb5f60c53f6bceebf7e32a" }
fixed_decimal = { git = "https://github.com/unicode-org/icu4x.git", rev = "b6791e78b1c2f69ffaeb5f60c53f6bceebf7e32a", features = ["ryu"] }
writeable = { git = "https://github.com/unicode-org/icu4x.git", rev = "b6791e78b1c2f69ffaeb5f60c53f6bceebf7e32a" }
tinystr = { git = "https://github.com/unicode-org/icu4x.git", rev = "b6791e78b1c2f69ffaeb5f60c53f6bceebf7e32a" }

[features]
# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
